--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ jobs:
 - job: Job_1
   displayName: Agent job 1
   pool:
-    vmImage: vs2017-win2016
+    name: daniel
 
   steps:
   - task: Gradle@2
