--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,10 @@ steps:
     gradleWrapperFile: 'gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
+    jdkVersionOption: '1.11'
     jdkArchitectureOption: 'x64'
+    jdkSourceOption: 'LocalDirectory'
+    jdkDirectory: 'C:\Users\dgarciap\Documents\jdk-11.0.20\bin' 
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'build'
