Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
     versionSpec: '11'
     jdkArchitectureOption: 'x64'
     jdkSourceOption: LocalDirectory
-    jdkFile: "/jdk-11.0.20_windows-x64_bin.zip"
+    jdkFile: "C:/Users/dgarciap/Downloads/jdk-11.0.20_windows-x64_bin.zip"
     jdkDestinationDirectory: "$(agent.tempDirectory)/bin"
     
 
